High World Space Cavity Samples Crash #75455

Closed
opened 2020-04-06 21:09:20 +02:00 by Aaron Carlisle · 8 comments
Member

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-04-04 16:55, hash: 505a19ed75
Worked: (newest version of Blender that worked as expected)

Short description of error
Using high sample counts crash blender

image.png

Exact steps for others to reproduce the error
Enable world cavity, increase samples until crash
#75455.blend
#75455.png

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-04-04 16:55, hash: `505a19ed75` Worked: (newest version of Blender that worked as expected) **Short description of error** Using high sample counts crash blender ![image.png](https://archive.blender.org/developer/F8453288/image.png) **Exact steps for others to reproduce the error** Enable world cavity, increase samples until crash [#75455.blend](https://archive.blender.org/developer/F8454664/T75455.blend) ![#75455.png](https://archive.blender.org/developer/F8454665/T75455.png)
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Confirmed, checking...

Confirmed, checking...
Member

The button is garbled memory here

1 UI_block_draw            interface.c              1913 0x398e8bb 
2 ui_block_region_draw     interface_region_popup.c 415  0x39ed191 
3 ED_region_do_draw        area.c                   534  0x353b211 
4 wm_draw_window_offscreen wm_draw.c                711  0x2ea65af 
5 wm_draw_window           wm_draw.c                806  0x2ea6947 
6 wm_draw_update           wm_draw.c                1014 0x2ea6f90 
7 WM_main                  wm.c                     456  0x2ea3b10 
8 main                     creator.c                524  0x2a63259 
The button is garbled memory here ``` 1 UI_block_draw interface.c 1913 0x398e8bb 2 ui_block_region_draw interface_region_popup.c 415 0x39ed191 3 ED_region_do_draw area.c 534 0x353b211 4 wm_draw_window_offscreen wm_draw.c 711 0x2ea65af 5 wm_draw_window wm_draw.c 806 0x2ea6947 6 wm_draw_update wm_draw.c 1014 0x2ea6f90 7 WM_main wm.c 456 0x2ea3b10 8 main creator.c 524 0x2a63259 ```
Member

Caused by c476c36e40

Caused by c476c36e40
Jeroen Bakker self-assigned this 2020-04-14 15:06:56 +02:00

This issue was referenced by ef19cd395f

This issue was referenced by ef19cd395fab3273e876010db1f2858df5d2f93f
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:38:06 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75455
No description provided.